# Crawler-nilesh

./: CMakeLists.txt  Parser.cpp  main.cpp  test.cpp
CDP/: CDPScraper.cpp  CDPScraper.h  CMakeLists.txt  main.cpp
Database/: CMakeLists.txt  Cq.html  Database.cpp  main.cpp
Database/include/: Database.h
Old_CDP/: CMakeLists.txt  README.md  cdp_scraper.cpp
Old_CDP/pages/: output.html
Only Html Download/: test.cpp
docs/Buildlogs/: 06-july-session-1.md  06-july-session-2.md  06-july-session-3.md  07-july-session-1.md  07-july-session-2.md  08-july-session-2.md  09-july-session-1.md  09-july-session-2.md  09-july-session-3.md  10-july-session-1.md  10-july-session-2.md  14-july-session-1.md  14-july-session-2.md  15-july-session-1.md  15-july-session-2.md  16-july-session-1.md  16-july-session-2.md  16-july-session-3.md  17-july-session-1.md  17-july-session-2.md  17-july-session-3.md  8-july-session-1.md  9-julu-session-2.md
docs/Daily journal/: 09-july-2026.md  10-july-2026.md  14-july-2026.md  15-july-2026.md  16-july-2026.md  17-july-2026.md  8-july-2026.md
docs/Design Proposal/: web_crawler_design_proposal_v1.md  web_crawler_design_proposal_v2.md  web_crawler_design_proposal_v3.md
include/: Crawler.h  Database.h  Frontier.h  HtmlParser.h  Indexer.h  Normalizer.h  PageStorage.h  Queue.h  Set.h
include/STL/: DynamicArray.h  HashMap.h  LinkedList.h
src/: CMakeLists.txt  Crawler.cpp  DynamicArray.tpp  Frontier.cpp  HashMap.tpp  HtmlParser.cpp  Indexer.cpp  LinkedList.tpp  Normalizer.cpp  PageStorage.cpp  Queue.tpp  Set.tpp
src/ignore/: domain.txt  extension.txt
test/: CMakeLists.txt  DatabaseTest.cpp  HtmlParserTests.cpp  NormalizerTests.cpp  PageStorageTests.cpp  QueueTests.cpp  SetTests.cpp
